--- a/web tech/solution/2023_assessment_fall/resources/qno5a.html
+++ b/web tech/solution/2023_assessment_fall/resources/qno5a.html
@@ -12,26 +12,29 @@
             width: 250px;
             padding: 10px;
         }
+        .error {
+            color: red;
+        }
     </style>
 </head>
 <body>
 <div class="register-form">
     <form id="registrationForm">
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required minlength="8" placeholder="Username">
+        <input type="text" id="username" name="username" minlength="8" placeholder="Username">
         <br>
         <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" placeholder="Email" required>
+        <input type="email" id="email" name="email" placeholder="Email">
         <br>
         <label for="phone">Phone:</label><br>
-        <input type="tel" id="phone" name="phone"   required minlength="10" maxlength="10" placeholder="Phone">
+        <input type="tel" id="phone" name="phone" minlength="10" maxlength="10" placeholder="Phone">
         <br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" placeholder="Password" required pattern="^0\d{6}0$">
+        <input type="password" id="password" name="password" placeholder="Password" pattern="^0\d{6}0$">
         <br>
         <label for="confirmPassword">Password:</label><br>
 
-        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password">
         <br>
         <br>
         <div style="text-align: center;">
@@ -39,7 +42,7 @@
         </div>
       </form>
       
-      <div id="errorMessages"></div>
+      <div id="errorMessages" class="error"></div>
 
 
       <script>
@@ -50,46 +53,70 @@
         event.preventDefault();
         errorMessages.innerHTML = '';
 
-        const usernameInput = document.getElementById('username');
-        const emailInput = document.getElementById('email');
-        const phoneInput = document.getElementById('phone');
-        const passwordInput = document.getElementById('password');
-        const confirmPasswordInput = document.getElementById('confirmPassword');
+        const username = document.getElementById('username').value;
+        const email = document.getElementById('email').value;
+        const phone = document.getElementById('phone').value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+
+          // regular expressions for validation
+        const usernameRegex = /^[a-zA-Z0-9_]{8}$/;
+        const emailRegex = /^\S+@\S+\.\S+$/;
+        const phoneRegex = /^\d{10}$/;
+        const passwordRegex = /^0\d{6}0$/;
+
+        let errorMsg = "";
+
+        // check if all inputs are filled
+        if (!username || !email || !phone || !password || !confirmPassword) {
+            errorMsg += '<p>*All fields are required.</p>'
+            errorMessages.innerHTML = errorMsg;
+            return;
+        }
 
         let isValid = true;
 
-        if (!usernameInput.checkValidity()) {
-            errorMessages.innerHTML += '<p>*Username must be at least 8 characters long.</p>';
+        if (!usernameRegex.test(username)) {
+            errorMsg += "Username must be 8 characters long and can only contain alphanumeric characters and underscore (_).<br>";
             isValid = false;
         }
 
-        if (!emailInput.checkValidity()) {
-            errorMessages.innerHTML += '<p>*Please enter a valid email address.</p>';
+        // check if email is valid
+        if (!emailRegex.test(email)) {
+            errorMsg += "Email must be in proper format.<br>";
             isValid = false;
+
         }
 
-        if (!phoneInput.checkValidity()) {
-            errorMessages.innerHTML += '<p>*Phone number must be 10 digits long.</p>';
+        // check if phone number is valid
+        if (!phoneRegex.test(phone)) {
+            errorMsg += "Phone number must be 10 digits long.<br>";
             isValid = false;
+
         }
 
-        if (!passwordInput.checkValidity()) {
-            errorMessages.innerHTML += '<p>*Password must be 8 digits long and start and end with 0.</p>';
+        // check if password is valid
+        if (!passwordRegex.test(password)) {
+            errorMsg += "Password must be 8 digits long and start and end with 0.<br>";
             isValid = false;
+
         }
 
-        if (passwordInput.value !== confirmPasswordInput.value) {
-            errorMessages.innerHTML += '<p>*Password and Confirm Password must match.</p>';
+        // check if password and confirm password match
+        if (password !== confirmPassword) {
+            errorMsg += "Password and confirm password must match.<br>";
             isValid = false;
+
         }
 
         if (isValid) {
             // Form is valid, do something with the data
             console.log('Form submitted successfully.');
             form.reset();
+        } else {
+            errorMessages.innerHTML = errorMsg;
         }
-        });
-
+    });
       </script>
 </div>
       
